tests/baselines/reference/parserVariableStatement1.d.errors.txt
parserVariableStatement1.d.ts(1,1): error TS1046: Top-level declarations in .d.ts files must start with either a 'declare' or 'export' modifier.
parserVariableStatement1.d.ts(1,9): error TS1039: Initializers are not allowed in ambient contexts.


==== parserVariableStatement1.d.ts (2 errors) ====
    var v = 1;
    ~~~
!!! error TS1046: Top-level declarations in .d.ts files must start with either a 'declare' or 'export' modifier.
            ~
!!! error TS1039: Initializers are not allowed in ambient contexts.